@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="iso-8859-1"?>
-<settings xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="settings.xsd" verbose="5" delays="true" tcptimeout="2000">
+<settings xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="settings.xsd" display2d="yes" display3d="no" verbose="5" delays="true" tcptimeout="2000">
   <delays position="0" begin_round="3" end_round="3" showdown="5" lag="15"/>
   <screen fullscreen="no" width="1024" height="768"/>
   <name>foobar1</name>
@@ -8,10 +8,10 @@
   <muck>yes</muck>
   <auto_post>yes</auto_post>
   <chat max_chars="40" line_length="20"/>
-  <servers>localhost:19380</servers>
+  <servers>localhost:19380 game1-test:19378</servers>
   <sound>yes</sound>
-  <tournaments real_money="n" type="regular" sort="name"/>
-  <lobby real_money="n" type="stud7" sort="name"/>
+  <tournaments real_money="n" type="sit_n_go" sort="name"/>
+  <lobby real_money="n" type="holdem" sort="name"/>
   <skin url="random" outfit="random"/>
   <user path="~/.poker2d"/>
   <path>/etc/poker-engine /etc/poker-network .</path> 
